src/test/ui/ui-testing-optout.stderr
error[E0412]: cannot find type `B` in this scope
 --> $DIR/ui-testing-optout.rs:4:10
  |
4 | type A = B;
  |          ^ not found in this scope

error[E0412]: cannot find type `D` in this scope
 --> $DIR/ui-testing-optout.rs:7:10
  |
4 | type A = B;
  | ----------- similarly named type alias `A` defined here
...
7 | type C = D;
  |          ^ help: did you mean `A`? (a similarly named type alias)

error[E0412]: cannot find type `F` in this scope
  --> $DIR/ui-testing-optout.rs:92:10
   |
4  | type A = B;
   | ----------- similarly named type alias `A` defined here
...
92 | type E = F;
   |          ^ help: did you mean `A`? (a similarly named type alias)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
